fix trips spacing in mobile

--- a/frontend/src/components/ProfilePage/ProfilePage.css
+++ b/frontend/src/components/ProfilePage/ProfilePage.css
@@ -253,4 +253,10 @@
     .show-review-body {
         width: 85vw;
     }
+    .res-info {
+        width: 50vw !important;
+    }
+    .res-dates {
+        flex-direction: column;
+    }
 }
